thread bound tx example updated